--- a/project/package.json
+++ b/project/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^5.2.1",
+    "method": "^2.0.0",
+    "method-override": "^3.0.0",
     "nodemon": "^3.1.11"
   }
 }
